<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMovieTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoComplete" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSearchMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/search"
        android:layout_below="@+id/textInputLayout"
        android:layout_alignParentEnd="true"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchedMoviesRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        tools:listitem="@layout/item_add_movie"
        android:layout_below="@+id/btnSearchMovie"
        android:overScrollMode="never"/>

    <FrameLayout
        android:id="@+id/focusable_view"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

</RelativeLayout>